V0.0.0.22:
- Improved on logging
- Added list of admin locked fields to "Extend" mode for TV-Shows
- Added count of extras for TV-Shows to "Extend" mode
- Added "Episode Sort Title" to "Basic" mode for TV-Shows

V0.0.0.21:
- Made an error, since I left some debug console printing in the code, that could cause the plug-in to fail

V0.0.0.20:
- Fixed issue 27: Added delimiter to the preferences, allowing user to specify which caracter to be used as field seperator
- Added a forced quote for fields when exporting
- Fixed issue 28: Section containing invalid caracters will not save

V0.0.0.19:
- Fixed a bug if a field was containing a CR, LF or CRLF caracters, since that would break the output

V0.0.0.18:
- Fixed a bug if timestam was missing
- Added algorithm so when exporting media or part info, it would only
  skip to a new line, if more than 1 item was present
- Added export level to the exported filename

V0.0.0.17:
- Added Extreme level to TV-Seris
-- This level was formerly known as the extended level
-- The Extended level now instead adds resolution info etc. about a show

V0.0.0.16:
- Added Extended level to TV-Series
-- This level will now export info about the different parts of an episode, 
-- like indexes, duration of the different parts of the episode, as well as the filename 
-- with the full path

V0.0.0.15:
- Added Extreme 2 level to movies
-- This level will now export info about the different parts of a movie, 
-- like indexes, duration of the different parts of the movie, as well as the filename 
-- with the full path

V0.0.0.14:
- Added some code to do wrapping on extended fields, if needed
- Added seperator to Prefs, that's used to seperate multiple info in the same field, like actors
- Added "Simple" and "Basic levels to TV-Shows
- Did a lot of Code clean-up for TV-Shows
- Added wrapping for TV-Shows as well
- Added round off of ratings to one digit

V0.0.0.13:
- Fixed exception in extreme mode, if data wasn't avail